--- a/ecotales-api/Dockerfile
+++ b/ecotales-api/Dockerfile
@@ -8,4 +8,4 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 COPY ./ecotales /code/ecotales
 
-CMD ["uvicorn", "ecotales.main:ecotales", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "ecotales.main:app", "--host", "0.0.0.0", "--port", "80"]
